--- a/LatexTemplate.tex
+++ b/LatexTemplate.tex
@@ -1,8 +1,23 @@
 \documentclass{article}
 
+
 \usepackage{multirow}
 \usepackage{pgfplots}
 \pgfplotsset{compat=newest}
+
+\usepackage{environ}
+\makeatletter
+\newsavebox{\measure@tikzpicture}
+\NewEnviron{scaletikzpicturetowidth}[1]{%
+	\def\tikz@width{#1}%
+	\def\tikzscale{1}\begin{lrbox}{\measure@tikzpicture}%
+		\BODY
+	\end{lrbox}%
+	\pgfmathparse{#1/\wd\measure@tikzpicture}%
+	\edef\tikzscale{\pgfmathresult}%
+	\BODY
+}
+\makeatother
 
 \pagestyle{empty}
 
@@ -13,32 +28,40 @@
 \definecolor{brightube}{rgb}{0.82, 0.62, 0.91}
 
 \begin{document}
-\begin{figure}[t]
-\begin{tikzpicture}
+
+\begin{scaletikzpicturetowidth}{\textwidth}
+\begin{tikzpicture}[scale=\tikzscale]
 \begin{axis}[xlabel=Size,ylabel=Time,legend style={at={(0.5,-0.1)},anchor=north}]
           	|COMPILETIMEGRAPH|
 \end{axis}
 \end{tikzpicture}
+\end{scaletikzpicturetowidth}
 
-\begin{tikzpicture}
+\begin{scaletikzpicturetowidth}{\textwidth}
+\begin{tikzpicture}[scale=\tikzscale]
  \begin{axis}[xlabel=Size,ylabel=States,legend style={at={(0.5,-0.1)},anchor=north}]
  	|STATESGRAPH|
  \end{axis}
  \end{tikzpicture}
+\end{scaletikzpicturetowidth}
 
-\begin{tikzpicture}
+\begin{scaletikzpicturetowidth}{\textwidth}
+\begin{tikzpicture}[scale=\tikzscale]
  \begin{axis}[xlabel=Size,ylabel=Transitions,legend style={at={(0.5,-0.1)},anchor=north}]
  	|TRANSITIONSGRAPH|
  \end{axis}
  \end{tikzpicture}
+ \end{scaletikzpicturetowidth}
 
-\begin{tikzpicture}
+\begin{scaletikzpicturetowidth}{\textwidth}
+\begin{tikzpicture}[scale=\tikzscale]
   \begin{axis}[xlabel=Size,ylabel=Plys,legend style={at={(0.5,-0.1)},anchor=north}]
   	|PLYSGRAPH|
   \end{axis}
 \end{tikzpicture}
-\end{figure}
+\end{scaletikzpicturetowidth}
 
+\clearpage
 	\begin{table}
 		\centering
 		\resizebox{\textwidth}{!}{
