--- a/LatexTemplateSt.tex
+++ b/LatexTemplateSt.tex
@@ -1,8 +1,23 @@
 \documentclass{article}
 
+
 \usepackage{multirow}
 \usepackage{pgfplots}
 \pgfplotsset{compat=newest}
+
+\usepackage{environ}
+\makeatletter
+\newsavebox{\measure@tikzpicture}
+\NewEnviron{scaletikzpicturetowidth}[1]{%
+	\def\tikz@width{#1}%
+	\def\tikzscale{1}\begin{lrbox}{\measure@tikzpicture}%
+		\BODY
+	\end{lrbox}%
+	\pgfmathparse{#1/\wd\measure@tikzpicture}%
+	\edef\tikzscale{\pgfmathresult}%
+	\BODY
+}
+\makeatother
 
 \pagestyle{empty}
 
@@ -13,70 +28,73 @@
 \definecolor{brightube}{rgb}{0.82, 0.62, 0.91}
 
 \begin{document}
-\begin{figure}[t]
-\begin{tikzpicture}
+
+\begin{scaletikzpicturetowidth}{\textwidth}
+\begin{tikzpicture}[scale=\tikzscale]
 \begin{axis}[xlabel=Size,ylabel=Time,legend style={at={(0.5,-0.1)},anchor=north}]
           	 \addlegendentry{LSec::ReqA} 
  \addplot[color=red,mark=x] coordinates {
-(10,570.777656)
-(15,211.196921)
-(20,275.779318)
-(25,274.966187)
-(30,311.274038)
+(10,305.817259)
+(15,208.62308)
+(20,286.731986)
+(25,278.869566)
+(30,321.094283)
 };
  \addlegendentry{LSec::ReqB} 
  \addplot[color=blue,mark=x] coordinates {
-(10,35.896702)
-(15,38.125988)
-(20,38.803038)
-(25,43.755829)
-(30,44.432559)
+(10,38.572936)
+(15,36.10563)
+(20,40.770376)
+(25,41.784405)
+(30,46.068707)
 };
  \addlegendentry{LSec::ReqC} 
  \addplot[color=green,mark=x] coordinates {
-(10,33.526741)
-(15,31.747752)
-(20,34.525354)
-(25,39.522478)
-(30,39.893282)
+(10,33.060776)
+(15,35.275337)
+(20,36.686104)
+(25,40.850579)
+(30,41.668232)
 };
  \addlegendentry{LSec::ReqD} 
  \addplot[color=yellow,mark=x] coordinates {
-(10,35.304031)
-(15,37.334013)
-(20,41.092189)
-(25,41.659413)
-(30,43.626596)
+(10,36.913529)
+(15,38.233277)
+(20,41.91905)
+(25,43.902074)
+(30,45.530756)
 };
  \addlegendentry{LSec::ReqE} 
  \addplot[color=purple,mark=x] coordinates {
-(10,35.321404)
-(15,33.487166)
-(20,35.428703)
-(25,40.249745)
-(30,42.72622)
+(10,34.418999)
+(15,33.00257)
+(20,36.198307)
+(25,38.405884)
+(30,40.90933)
 };
  \addlegendentry{LSec::ReqF} 
  \addplot[color=orange,mark=x] coordinates {
-(10,31.235164)
-(15,33.36688)
-(20,37.347345)
-(25,42.605967)
-(30,44.001745)
+(10,33.156702)
+(15,33.108975)
+(20,37.076638)
+(25,40.896747)
+(30,43.393215)
 };
  \addlegendentry{LSec::ReqG} 
  \addplot[color=black,mark=x] coordinates {
-(10,61.147563)
-(15,62.24921)
-(20,65.244453)
-(25,71.276991)
-(30,77.197689)
+(10,65.281846)
+(15,65.198822)
+(20,66.633681)
+(25,77.678412)
+(30,76.358953)
 };
 
 \end{axis}
 \end{tikzpicture}
+\end{scaletikzpicturetowidth}
 
-\begin{tikzpicture}
+\begin{scaletikzpicturetowidth}{\textwidth}
+\begin{tikzpicture}[scale=\tikzscale]
  \begin{axis}[xlabel=Size,ylabel=States,legend style={at={(0.5,-0.1)},anchor=north}]
  	\addplot[color=red,mark=x] coordinates {
 (10,227.0)
@@ -130,8 +148,10 @@
 
  \end{axis}
  \end{tikzpicture}
+\end{scaletikzpicturetowidth}
 
-\begin{tikzpicture}
+\begin{scaletikzpicturetowidth}{\textwidth}
+\begin{tikzpicture}[scale=\tikzscale]
  \begin{axis}[xlabel=Size,ylabel=Transitions,legend style={at={(0.5,-0.1)},anchor=north}]
  	\addplot[color=red,mark=x] coordinates {
 (10,7562.0)
@@ -185,8 +205,10 @@
 
  \end{axis}
  \end{tikzpicture}
+ \end{scaletikzpicturetowidth}
 
-\begin{tikzpicture}
+\begin{scaletikzpicturetowidth}{\textwidth}
+\begin{tikzpicture}[scale=\tikzscale]
   \begin{axis}[xlabel=Size,ylabel=Plys,legend style={at={(0.5,-0.1)},anchor=north}]
   	\addplot[color=red,mark=x] coordinates {
 (10,18.0)
@@ -240,8 +262,9 @@
 
   \end{axis}
 \end{tikzpicture}
-\end{figure}
+\end{scaletikzpicturetowidth}
 
+\clearpage
 	\begin{table}
 		\centering
 		\resizebox{\textwidth}{!}{
@@ -250,23 +273,23 @@
 \multirow{4}{*}{10} & States & 227.0&256.0&227.0&471.0&227.0&260.0&681.0\\[1mm]   \cline{2-9} 
  & Transitions &7562.0&8279.0&7562.0&14765.0&7562.0&8337.0&19920.0\\[1mm]  \cline{2-9} 
   & Plys & 18.0&18.0&18.0&19.0&18.0&18.0&20.0\\[1mm]  \cline{2-9} 
-  & Time &570.78&35.9&33.53&35.3&35.32&31.24&61.15\\[1mm] \hline 
+  & Time &305.82&38.57&33.06&36.91&34.42&33.16&65.28\\[1mm] \hline 
 \multirow{4}{*}{15} & States & 327.0&366.0&327.0&681.0&327.0&375.0&986.0\\[1mm]   \cline{2-9} 
  & Transitions &11132.0&12139.0&11132.0&21770.0&11132.0&12277.0&29395.0\\[1mm]  \cline{2-9} 
   & Plys & 23.0&23.0&23.0&24.0&23.0&23.0&25.0\\[1mm]  \cline{2-9} 
-  & Time &211.2&38.13&31.75&37.33&33.49&33.37&62.25\\[1mm] \hline 
+  & Time &208.62&36.11&35.28&38.23&33.0&33.11&65.2\\[1mm] \hline 
 \multirow{4}{*}{20} & States & 427.0&476.0&427.0&891.0&427.0&490.0&1291.0\\[1mm]   \cline{2-9} 
  & Transitions &14702.0&15999.0&14702.0&28775.0&14702.0&16217.0&38870.0\\[1mm]  \cline{2-9} 
   & Plys & 28.0&28.0&28.0&29.0&28.0&28.0&30.0\\[1mm]  \cline{2-9} 
-  & Time &275.78&38.8&34.53&41.09&35.43&37.35&65.24\\[1mm] \hline 
+  & Time &286.73&40.77&36.69&41.92&36.2&37.08&66.63\\[1mm] \hline 
 \multirow{4}{*}{25} & States & 527.0&586.0&527.0&1101.0&527.0&605.0&1596.0\\[1mm]   \cline{2-9} 
  & Transitions &18272.0&19859.0&18272.0&35780.0&18272.0&20157.0&48345.0\\[1mm]  \cline{2-9} 
   & Plys & 33.0&33.0&33.0&34.0&33.0&33.0&35.0\\[1mm]  \cline{2-9} 
-  & Time &274.97&43.76&39.52&41.66&40.25&42.61&71.28\\[1mm] \hline 
+  & Time &278.87&41.78&40.85&43.9&38.41&40.9&77.68\\[1mm] \hline 
 \multirow{4}{*}{30} & States & 627.0&696.0&627.0&1311.0&627.0&720.0&1901.0\\[1mm]   \cline{2-9} 
  & Transitions &21842.0&23719.0&21842.0&42785.0&21842.0&24097.0&57820.0\\[1mm]  \cline{2-9} 
   & Plys & 38.0&38.0&38.0&39.0&38.0&38.0&40.0\\[1mm]  \cline{2-9} 
-  & Time &311.27&44.43&39.89&43.63&42.73&44.0&77.2\\[1mm] \hline 
+  & Time &321.09&46.07&41.67&45.53&40.91&43.39&76.36\\[1mm] \hline 
 
 			\end{tabular}
 		}
