--- a/LatexTemplate.tex
+++ b/LatexTemplate.tex
@@ -31,7 +31,7 @@
 
 \begin{scaletikzpicturetowidth}{\textwidth}
 \begin{tikzpicture}[scale=\tikzscale]
-\begin{axis}[xlabel=Size,ylabel=Time,legend style={at={(0.5,-0.1)},anchor=north}]
+\begin{axis}[xlabel=No. of Visitors in Exhibition Area,ylabel=Time (sec),legend style={at={(0.5,-0.1)},anchor=north}]
           	|COMPILETIMEGRAPH|
 \end{axis}
 \end{tikzpicture}
@@ -39,7 +39,7 @@
 
 \begin{scaletikzpicturetowidth}{\textwidth}
 \begin{tikzpicture}[scale=\tikzscale]
- \begin{axis}[xlabel=Size,ylabel=States,legend style={at={(0.5,-0.1)},anchor=north}]
+ \begin{axis}[xlabel=No. of Visitors in Exhibition Area,ylabel=States,legend style={at={(0.5,-0.1)},anchor=north}]
  	|STATESGRAPH|
  \end{axis}
  \end{tikzpicture}
@@ -47,19 +47,12 @@
 
 \begin{scaletikzpicturetowidth}{\textwidth}
 \begin{tikzpicture}[scale=\tikzscale]
- \begin{axis}[xlabel=Size,ylabel=Transitions,legend style={at={(0.5,-0.1)},anchor=north}]
+ \begin{axis}[xlabel=No. of Visitors in Exhibition Area,ylabel=Transitions,anchor=north}]
  	|TRANSITIONSGRAPH|
  \end{axis}
  \end{tikzpicture}
  \end{scaletikzpicturetowidth}
 
-\begin{scaletikzpicturetowidth}{\textwidth}
-\begin{tikzpicture}[scale=\tikzscale]
-  \begin{axis}[xlabel=Size,ylabel=Plys,legend style={at={(0.5,-0.1)},anchor=north}]
-  	|PLYSGRAPH|
-  \end{axis}
-\end{tikzpicture}
-\end{scaletikzpicturetowidth}
 
 \clearpage
 	\begin{table}
